27.feb (ws)
      - fix #4709: play panel preferences
      - fix #4722: play panel crash if no score loaded
      - fix #4717: arpeggio position of cross staff notes is wrong
      - fix #4728: Split Staff crash
25.feb (db)
      - add Hungarian handbook
24.feb (ws)
      - fix #4335: Grace note slur
23.feb (db)
      - update handbooks (except English)
      - edit beams in wtc1fuga5 demo (Bug #4665)
      - update Brazilian instrument list from vitor.
22.feb. (ws)
      - fix: save editing of clef (dragging in edit mode)
      - fix #4626: layout of mid measure clef
      - fix #4627: setting title/subtitle/poet/composer in score script interface not implemented
      - fix #4288: its possible to drag/drop a time/key signature in middle of measure
      - fix #4216: change font family in text properties does not work
      (la)
      - cursor follows midi input
      - customize doxygen
      - fix time on first playback panel opening
21.feb (ws)
      - fix midi keyboard note entry
20.feb (lv)
      - import MusicXML quarter tone accidentals following Tartini convention
        (export was done by (la) on Jan 26
      (db)
      - remove Tuning plugin since feature is available via Display > Synthesizer
      - remove default Sharp shortcut since it conflicts with Shift+3 on US layout
19.feb (ws)
      - script interface chords: add "type" property to distinguish between normal and grace notes
      - expose grace notes in script cursor interface
17.feb (lv)
      - updated MusicXML testfiles
       (ws)
      - implemented "Change Instrument..." button in staff properties dialog to initialize all
        instrument properties from an instrument template (in instruments.xml)
      - implemented "show more" checkbox for instrument dialog. All instrument groups and instruments
        marked with the <extended\> tag in instruments.xml are only shown when "show more" is checked.
16.feb (ws)
      - script interface: introduced script interface version numbers